# Value-Analysis-Tool

./: .gitignore  CONTRIBUTING.md  EPS_ROE_CONSISTENCY_FIXES_SUMMARY.md  EPS_ROE_ISSUES_FIXED.md  FINANCIAL_DATA_STRUCTURE_STANDARDS.md  GITHUB_SETUP.md  LICENSE  MANIFEST.in  PROGRESSIVE_DATA_SUPPLEMENTATION.md  README.md  REQUIREMENTS_CLEANUP_SUMMARY.md  Value_Analysis.py  Value_AnalysisGUI.py  advanced_eps_extractor.py  ai_ml_improvement_plan.py  config_manager.py  enhanced_pdf_extractor.py  enhanced_perplexity_client.py  llm_config.py  market_data_integration.py  perplexity_client.py  perplexity_integration.py  perplexity_mcp_client.py  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  setup.py  word_document_creator_fixed.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
